--- a/cake.html
+++ b/cake.html
@@ -7,7 +7,7 @@
   <body>
     <script>
 var question = prompt("Do you want cake? (yes/no)");
-if (question === "yes") (question === "YES"){
+if (question === "yes" || question === "YES"){
   console.log("Have some cake!");
 } else {
   console.log("No cake for you!");
